--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
+---
 sources:
-  "pysmbc-1.0.10.tar.bz2": 1963af6e7fcb75733d5a398ffc0c4578532bc61d
+  pysmbc-1.0.13.tar.bz2: bf37346af4a6b543f7f91c46d0d1d0cc6020db32
