--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,2 @@
----
 sources:
-  pysmbc-1.0.13.tar.bz2: bf37346af4a6b543f7f91c46d0d1d0cc6020db32
+  pysmbc-1.0.25.1.tar.gz: ac0204cfe2fc9d422ba4c8b0b74b9242fa257de0
